--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,3 +36,25 @@ body {
      margin-top: 8vh;
      vertical-align: top;
  }
+
+/* CART MODAL */
+
+.modal {
+    position: fixed; 
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vw; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+}
+
+ .cart {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80vw;
+ }
