--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,16 +1,19 @@
 body {
     box-sizing: border-box;
+    font-family: Verdana, sans-serif;
 }
 
 #app {
-    width: 70vw;
+    width: 80vw;
+    min-width: 50vw;
     margin: 10vh 0 0 15vw;
 }
- h2 {
-     text-align: center;
+ #title {
+     font-size: 2vw; 
+     margin-left: 15vw;
  }
 
- .item > div{
+ .item div{
      text-align: center;
      width: 25vw;
      margin: 4vh 1vw 0 1vw;
@@ -18,11 +21,11 @@ body {
      vertical-align: top;
  }
 
- .item > div:nth-child(2) {
+ .item div:nth-child(2) {
      margin-top: 8vh;
  }  
 
-  .item > div:nth-child(2) button {
+  .item div:nth-child(2) button {
      margin-left: 2vw;
  }  
 
@@ -45,7 +48,7 @@ body {
     left: 0;
     top: 0;
     width: 100vw;
-    height: 100vw; 
+    height: 100%; 
     overflow: auto; 
     background-color: rgb(0,0,0); 
     background-color: rgba(0,0,0,0.4); 
@@ -56,5 +59,45 @@ body {
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80vw;
+    width: 40vw;
+ }
+
+ .cart-item div{
+     display: inline-block;
+     width: 7vw;
+     margin: 0 1vw 2vw 0;
+ }
+
+ @media (max-width: 768px){
+
+     #title {
+        font-size: 17px; 
+        margin-left: 150px;
+    }
+
+    #item-list {
+        width: 500px;
+    }
+    
+     #app {
+         width: 726px;
+         margin: 10vh 0 0 30px;
+     }
+
+     .item div{
+         width: 230px;
+         margin: 4vh .5vw 0 .5vw;
+     }
+
+      .cart {
+          width: 452px;
+      }
+
+      .cart-item div{ 
+          width: 71px;
+      }
+      #view-cart-button {
+        margin-top: 8vh;
+        vertical-align: top;
+     }
  }
